# backend/openapi.json
@@ -725,6 +725,28 @@
         "tags": [
           "competencies"
         ]
+      },
+      "delete": {
+        "operationId": "CompetenciesController_deleteStack",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        },
+        "summary": "Удалить стек",
+        "tags": [
+          "competencies"
+        ]
       }
     },
     "/api/competencies": {
@@ -855,6 +877,28 @@
           }
         },
         "summary": "Обновить компетенцию",
+        "tags": [
+          "competencies"
+        ]
+      },
+      "delete": {
+        "operationId": "CompetenciesController_deleteCompetency",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        },
+        "summary": "Удалить компетенцию",
         "tags": [
           "competencies"
         ]
